[gd_scene load_steps=2 format=3 uid="uid://ba8lqvuix6xfh"]

[ext_resource type="Script" path="res://Scripts/ui/settings_panel.gd" id="1_settings"]

[node name="SettingsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="SettingsDialog" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2
text = "設定"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeContainer" type="HBoxContainer" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="SettingsDialog/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "マスター音量"

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsDialog/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 100.0

[node name="MasterVolumeValue" type="Label" parent="SettingsDialog/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "100%"
horizontal_alignment = 2

[node name="BGMVolumeContainer" type="HBoxContainer" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="BGMVolumeLabel" type="Label" parent="SettingsDialog/VBoxContainer/BGMVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BGM音量"

[node name="BGMVolumeSlider" type="HSlider" parent="SettingsDialog/VBoxContainer/BGMVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 100.0

[node name="BGMVolumeValue" type="Label" parent="SettingsDialog/VBoxContainer/BGMVolumeContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "100%"
horizontal_alignment = 2

[node name="SFXVolumeContainer" type="HBoxContainer" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="SettingsDialog/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "効果音音量"

[node name="SFXVolumeSlider" type="HSlider" parent="SettingsDialog/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 100.0

[node name="SFXVolumeValue" type="Label" parent="SettingsDialog/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "100%"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="SettingsDialog/VBoxContainer/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "フルスクリーン"

[node name="FullscreenCheck" type="CheckBox" parent="SettingsDialog/VBoxContainer/FullscreenContainer"]
layout_mode = 2

[node name="ResolutionContainer" type="HBoxContainer" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="SettingsDialog/VBoxContainer/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "解像度"

[node name="ResolutionOption" type="OptionButton" parent="SettingsDialog/VBoxContainer/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="SettingsDialog/VBoxContainer"]
layout_mode = 2

[node name="DefaultsButton" type="Button" parent="SettingsDialog/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "デフォルト"

[node name="CloseButton" type="Button" parent="SettingsDialog/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "閉じる"